<resources>
    <string name="app_name">OrdersDelivery</string>
    <string name="welcome_back">Welcome Back!!</string>
    <string name="log_back_into_your_account">Log back into your account</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="wait">Wait</string>
    <string name="newOrders">New</string>
    <string name="othersOrders">Others</string>
    <string name="status">status</string>
    <string name="details">details</string>
    <string name="total_price">Total price</string>
    <string name="date">Date</string>
    <string name="l_e">LE</string>
    <string name="data_uncompleted">Data uncompleted</string>
    <string name="no_orders_yet">No Orders yet</string>
    <string name="you_don_t_have_any_orders_in_your_history">You don\'t have any orders in your history.</string>
    <string name="neww">New</string>
    <string name="delivered">Delivered</string>
    <string name="partial_Return">Partial Return</string>
    <string name="full_Return">Full Return</string>
    <string name="choose_your_preferred_language">Choose Your Preferred Language</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cancel">Cancel</string>
    <string name="order_date">Order Date</string>
    <string name="select">Select</string>
</resources>