<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.ordersdelivery.domain.model.response.OrdersModel.Data.DeliveryBill" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text='@{model.BILL_SRL+""}'
                android:textColor="@color/gray10"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearEnd"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background='@{model.DLVRY_STATUS_FLG.equals("0")?@color/green:model.DLVRY_STATUS_FLG.equals("1")?@color/colorPrimary:model.DLVRY_STATUS_FLG.equals("2")?@color/gray0:model.DLVRY_STATUS_FLG.equals("3")?@color/red:@color/white}'
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/details"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="5dp"
                    android:rotation='@{lang.equals("ar")?0:180}'
                    android:src="@drawable/ic_back" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/linearEnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCode">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/gray10"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor='@{model.DLVRY_STATUS_FLG.equals("0")?@color/green:model.DLVRY_STATUS_FLG.equals("1")?@color/colorPrimary:model.DLVRY_STATUS_FLG.equals("2")?@color/gray0:model.DLVRY_STATUS_FLG.equals("3")?@color/red:@color/white}'
                        android:text='@{model.DLVRY_STATUS_FLG.equals("0")?@string/neww:model.DLVRY_STATUS_FLG.equals("1")?@string/delivered:model.DLVRY_STATUS_FLG.equals("2")?@string/partial_Return:model.DLVRY_STATUS_FLG.equals("3")?@string/full_Return:""}'
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray11" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_price"
                        android:textColor="@color/gray10"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray11" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/gray10"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{model.BILL_DATE}"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>